# dde-session-ui

./: .clog.toml  .gerrit_sources_list  .gitignore  .packit.yaml  .project  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README.zh_CN.md  REUSE.toml  SessionManager.pro  SessionManager.pro.user.18  SessionManager.pro.user.3.2-pre1  common.pri  contentwidget.cpp  contentwidget.h  dbusmanagement.h  dde-session-ui.pro  image.qrc  leftcornerwidget.cpp  leftcornerwidget.h  leftframe.cpp  leftframe.h  lupdate.sh  main.cpp  mainframe.cpp  mainframe.h  passwdedit.cpp  passwdedit.h  powermenuframe.cpp  powermenuframe.h  qss.qrc  sessionbutton.cpp  sessionbutton.h  sessionmanagement.h  sessionmanager.cpp  sessionmanager.h  starttest.sh  (+2 more)
common/: CMakeLists.txt  accessibilitycheckerex.cpp  accessibilitycheckerex.h
dde-blackwidget/: CMakeLists.txt
dde-blackwidget/src/: main.cpp  window.cpp  window.h
dde-bluetooth-dialog/: CMakeLists.txt  dde-bluetooth-dialog.pro  main.cpp  pincodedialog.cpp  pincodedialog.h  src.pri
dde-bluetooth-dialog/src/: CMakeLists.txt  largelabel.h  main.cpp  pincodedialog.cpp  pincodedialog.h
dde-bluetooth-dialog/tests/: CMakeLists.txt  main.cpp  ut_pincodedialog.cpp
dde-hints-dialog/: CMakeLists.txt  dde-hints-dialog.pro  hintsdialog.cpp  hintsdialog.h  horizontalseperator.cpp  horizontalseperator.h  main.cpp  src.pri
dde-hints-dialog/src/: CMakeLists.txt  hintsdialog.cpp  hintsdialog.h  horizontalseperator.cpp  horizontalseperator.h  main.cpp
dde-license-dialog/: CMakeLists.txt  content.cpp  content.h  dde-license-dialog.pro  main.cpp  mainwindow.cpp  mainwindow.h  sourcelabel.cpp  sourcelabel.h  src.pri
dde-license-dialog/resources/: markdowneditor.qrc
dde-license-dialog/src/: CMakeLists.txt  content.cpp  content.h  main.cpp  mainwindow.cpp  mainwindow.h
dde-license-dialog/tests/: CMakeLists.txt  main.cpp  ut_content.cpp  ut_mainwindow.cpp
dde-lowpower/: CMakeLists.txt  dde-lowpower.pro  images.qrc  main.cpp  src.pri  window.cpp  window.h
dde-lowpower/src/: CMakeLists.txt  images.qrc  (+3 more)
dde-notification-plugin/: CMakeLists.txt  dde-notification-plugin.pro  notificationsplugin.cpp  notificationsplugin.h  notificationswidget.cpp  notificationswidget.h  resources.qrc  src.pri
dde-osd/: CMakeLists.txt  abstractosdprovider.cpp  abstractosdprovider.h  accessible.h  accessibledefine.h  audioprovider.cpp  audioprovider.h  brightnessprovider.cpp  brightnessprovider.h  com.deepin.dde.osd.service  common.cpp  common.h  container.cpp  container.h  dde-osd.pro  dde-osd_autostart.desktop  delegate.cpp  delegate.h  displaymodeprovider.cpp  displaymodeprovider.h  image.qrc  indicatorprovider.cpp  indicatorprovider.h  kblayoutindicator.cpp  kblayoutindicator.h  kblayoutprovider.cpp  kblayoutprovider.h  keybord_layout.json  light.qss  listview.cpp  listview.h  main.cpp  manager.cpp  manager.h  micstateprovider.cpp  micstateprovider.h  model.cpp  model.h  osd.cpp  osd.h  (+15 more)
dde-pixmix/: CMakeLists.txt  dde-pixmix.pro  main.cpp
dde-suspend-dialog/: CMakeLists.txt  dde-suspend-dialog.pro  main.cpp  src.pri  suspenddialog.cpp  suspenddialog.h
dde-switchtogreeter/: CMakeLists.txt  dde-switchtogreeter.pro  switchtogreeter.c
dde-touchscreen-dialog/: CMakeLists.txt  dde-touchscreen-dialog.pro  main.cpp  monitorindicator.cpp  monitorindicator.h  recognizedialog.cpp  recognizedialog.h  src.pri  touchscreensetting.cpp  touchscreensetting.h
dde-warning-dialog/: CMakeLists.txt  dde-warning-dialog.pro  help.md  main.cpp  src.pri  warningdialog.cpp  warningdialog.h
dde-welcome/: CMakeLists.txt  com.deepin.dde.welcome.service  com.deepin.dde.welcome.xml  dde-welcome.pro  main.cpp  mainwidget.cpp  mainwidget.h  resources.qrc  src.pri  update.cpp  update.h  updatecontent.cpp  updatecontent.h  utils.cpp  utils.h  version.h  welcome.cpp  welcome.h  welcomeservice.cpp  welcomeservice.h
dde-wm-chooser/: CMakeLists.txt  dde-wm-chooser.pro  main.cpp  src.pri  wmchooser.cpp  wmchooser.h  wmframe.cpp  wmframe.h
deepin-login-reminder/: CMakeLists.txt  deepin-login-reminder.desktop  loginreminderinfo.cpp  loginreminderinfo.h  main.cpp
dmemory-warning-dialog/: CMakeLists.txt  buttondelegate.cpp  buttondelegate.h  dmemory-warning-dialog.pro  dmemorywarningdialog.cpp  dmemorywarningdialog.h  dmemorywarningdialogadaptor.h  main.cpp  processinfodelegate.cpp  processinfodelegate.h  processinfomanager.cpp  processinfomanager.h  processinfotable.h
dnetwork-secret-dialog/: CMakeLists.txt  dnetwork-secret-dialog.pro  main.cpp  networkdialog.cpp  networkdialog.h  networksecretdialog.cpp  networksecretdialog.h  src.pri
global_util/: CMakeLists.txt  accountsutils.cpp  accountsutils.h  commonimage.qrc  constants.h  global_util.pri  multiscreenmanager.cpp  multiscreenmanager.h  public_func.cpp  public_func.h  util_file.cpp  util_file.h  util_parsexml.cpp  util_parsexml.h  util_settings.cpp  util_settings.h  util_signalmanager.cpp  util_signalmanager.h  util_updateui.cpp  util_updateui.h  xkbparser.cpp  xkbparser.h
reset-password-dialog/: CMakeLists.txt  main.cpp  passwordwidget.cpp  passwordwidget.h  pwqualitymanager.cpp  pwqualitymanager.h  resetpassworddialog.cpp  resetpassworddialog.h  resetpasswordworker.cpp  resetpasswordworker.h  securityquestionswidget.cpp  securityquestionswidget.h  unionidwidget.cpp  unionidwidget.h  utils.h
widgets/: CMakeLists.txt  capslockmonitor.cpp  capslockmonitor.h  controlwidget.cpp  controlwidget.h  darrowrectangle.cpp  darrowrectangle.h  dbreathinglabel.cpp  dbreathinglabel.h  errortooltip.cpp  errortooltip.h  fullscreenbackground.cpp  fullscreenbackground.h  kblayoutwidget.cpp  kblayoutwidget.h  keyboardmonitor.cpp  keyboardmonitor.h  loginbutton.cpp  loginbutton.h  mediawidget.cpp  mediawidget.h  otheruserinput.cpp  otheruserinput.h  passwdedit.cpp  passwdedit.h  propertygroup.cpp  propertygroup.h  rounditembutton.cpp  rounditembutton.h  sessionbutton.cpp  sessionbutton.h  sessions.qrc  sessionwidget.cpp  sessionwidget.h  shutdownwidget.cpp  shutdownwidget.h  skin.qrc  useravatar.cpp  useravatar.h  userbreathinglabel.cpp  (+10 more)
(+1118 files in other folders)
